<resources>
    <string name="app_name">Scavenger_Gradle</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="name">Name</string>
    <string name="welcome_to_scavenger">Welcome to Scavenger</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="start_using_scavenger">Start Using Scavenger</string>
    <string name="or_enter_sku">or enter SKU:</string>
    <string name="sku">SKU</string>
    <string name="main_allergy">Main Allergy</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="enter_sku_number">Enter SKU Number</string>
</resources>